added two new challenges
